--- a/Grunnlegende-HTML/css/stylesheet.css
+++ b/Grunnlegende-HTML/css/stylesheet.css
@@ -1,6 +1,33 @@
+:root{
+    --basic-grey: #bcb9b9;
+    --basic-red: #ee2c2c;
+
+}
+
+
+
 body{
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
 }
+
+#global-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    nav{
+        ul{
+            padding: 0;
+            margin: 0;
+            li{
+                list-style: none;
+                display: inline-block;
+            }
+        }
+    }
+}
+
 
 #mainlogo{
     font-size: 30px;
@@ -14,6 +41,12 @@ a{
     color: #000;
     text-decoration: none;
 }
+
+.deal-section{
+    background-color: var(--basic-grey);
+    padding: 1rem;
+}
+
 
 article{
     margin: 1rem 0;
@@ -35,4 +68,5 @@ article{
     background-color: #000;
     color: #fff;
     padding: 1rem;
+    border: none;
 }
