--- a/labovelser/labovelse5_css_grid_og_flexbox/css/styl.css
+++ b/labovelser/labovelse5_css_grid_og_flexbox/css/styl.css
@@ -9,8 +9,12 @@ body{
 
 .grid-container{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    /* grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr; */
+    grid-template-columns: 2fr 2fr 1fr;
+    grid-template-areas: "header header header"
+                        "main main aside"
+                        "footer footer footer";
 
 }
 
@@ -41,7 +45,8 @@ main, aside{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    grid-column: 1 / 4;
+    /* grid-column: 1 / 4;  */
+    grid-area: header;
 
 
 
@@ -61,7 +66,9 @@ main, aside{
 
 /*MAIN*/
 main{
-    grid-column: 1 / 2;
+    /* grid-column: 1 / 2; */
+    grid-area: main;
+
 }
 main article{
     border: 1px solid #adadad;
@@ -72,7 +79,8 @@ main article{
 
 /*ASIDE*/
 aside{
-    grid-column: 2 / 4;
+    /* grid-column: 2 / 4; */
+    grid-area: aside;
 }
 
 aside a{
@@ -87,7 +95,8 @@ aside a{
     background-color: #adadad;
     padding: 1rem;
     margin-top: 1rem;
-    grid-column: 1 / 4;
+    /* grid-column: 1 / 4; */
+    grid-area: footer;
     
 
     form{
