--- a/Responsivt-grid/css/style.css
+++ b/Responsivt-grid/css/style.css
@@ -3,10 +3,18 @@
     --aside: #e8dfca;
     --header: #cbdceb;
     --footer: #6d94c5;
+
+    --small: clamp(14px, 1rem + 1vw, 18px);
+    --medium: clamp(16px, 1rem + 1vw, 20px);
+    --large: clamp(18px, 1rem + 1vw, 24px);
 }
 
 *{
     box-sizing: border-box;
+}
+
+html{
+    font-size: clamp(16px, 1rem + 1vw, 30px); /*mist 16px, størst 30px*/
 }
 
 body{
@@ -14,6 +22,7 @@ body{
     margin: 0;
     min-height: 100vh; /*fyller helle skjerme høyden*/
     display: flex;      /*fyller helle skjerme høyden*/
+    font-size: 1rem;
 }
 
 #grid-container{
@@ -25,6 +34,18 @@ body{
                         "bunn";
 }
 
+/* 
+h1{
+    font-size: var(--large);
+}
+h2{
+    font-size: var(--medium)
+}
+h3{
+    font-size: var(--small);
+} */
+
+
 header, main, aside, footer{
     padding: 1rem;
 }
@@ -32,6 +53,18 @@ header, main, aside, footer{
 header{
     background-color: var(--header);
     grid-area: topp;
+
+    nav{
+        ul{
+            list-style: none;
+            li{
+                a{
+                    text-decoration: none;
+                    color: #000;
+                }
+            }
+        }
+    }
 }
 
 main{
@@ -51,6 +84,11 @@ footer{
 
 .hidden{
     display: none;
+}
+
+img{
+    width: 100%;
+    max-width: 900px;
 }
 
 /*Spesifikk for mobilen*/
@@ -91,6 +129,10 @@ footer{
     }
 
     #ham{
+        display: none;
+    }
+
+    #close{
         display: none;
     }
 }
